src/App.css
@font-face {
  font-family: "Andale Mono";
  src: url("./fonts/andalemo.ttf") format("truetype"),
      url("./fonts/andalemo-webfont.woff") format("woff"),
      url("./fonts/andalemo-webfont.woff2") format("woff2");
}

@font-face {
  font-family: "Free Serif";
  src: url("./fonts/freeserifbolditalic.ttf") format("truetype"),
       url("./fonts/freeserifbolditalic-webfont.woff") format("woff"),
       url("./fonts/freeserifbolditalic-webfont.woff2") format("woff2");
      
}

body{
  overflow: hidden;
  background: #F2F0E9;
  color: #3C4586;
  border:2px solid #3C4586;
  min-height:100vh;
  margin:0;
  font-size:36px;
  padding:0;
  font-family: "Andale Mono", monospace;
}

h1{
  font-size:64px;
  font-family:"Free Serif", serif;
}
h2{
  font-weight:normal;
  font-size:36px;
}
a:link{
  color:#3C4586;
  font-size:36px;
  text-decoration: none;
}
a:hover{
  text-decoration: underline;
}
iframe{
  max-width: 100%;
  
}
.iframe{
  border:2px solid #3C4586;
  display: inline-block;
}
@media(max-width: 768px){
  body,body header{
    overflow-y: visible;
    border:none;
  }
  h2{
    font-size:18px;
  }
  a:link{
    font-size:18px;
  }
}

